--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,34 @@
 .nav-link:hover {
   color: rgb(196, 193, 187);
 }
+
+/* Footer styles */
+#footerContainer{
+  padding: 20px 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgb(240, 237, 231);
+}
+
+#footerContainer img{
+  width: 13vh;
+}
+
+#footerContainer button{
+margin-right: 10px;
+}
+
+.location{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-left: 1px solid black;
+  padding-left: 10px;
+  width: fit-content;
+}
+
+#locationsTitle{
+  font-size: 20px;
+}
