--- a/src/App.css
+++ b/src/App.css
@@ -264,6 +264,51 @@
   margin: 20px;
 }
 
+
+/* FAQ page */
+#faqWelcome {
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.accentLine {
+  margin: 15px;
+  width: 25%;
+  border-bottom: 1px solid black;
+}
+
+.questionContainer {
+  background-color: var(--color-1);
+  padding: 10px;
+  margin: 15px 40px;
+  border-radius: 35px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.question{
+  font-size: 25px;
+  font-family: var(--font-1);
+}
+
+.answer{
+  font-size: 20px;
+}
+
+#faqFooter {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+
+#faqLogo {
+  width: 150px;
+}
+
 /* ##################################### component styles ##################################### */
 
 
