--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@
   --color-4: rgb(0, 0, 0);
   --font-1: 'Italianno', cursive;
   --font-2: 'Raleway', sans-serif;
-  ;
 }
 
 .App {
@@ -29,6 +28,10 @@
 
 .botPad {
   margin-bottom: 20px;
+}
+
+img ,#packageTitleImg{
+  border-radius: 35px;
 }
 
 /* ##################################### page styles ##################################### */
